--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
   <h1>Hallo Adam</h1>
+  <button id="back-btn">Back</button>
+
+  <script>
+     document.getElementById("back-btn").addEventListener("click", window.close()); 
+  </script>
 </body>
 </html>
